--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://url-shortener-postgres:5432/${DB_NAME}
       SPRING_DATASOURCE_USERNAME: ${DB_USER}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+      SPRING_DATA_REDIS_HOST: url-shortener-redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_DATABASE: 0
   url-shortener-postgres:
     image: postgres:16.0-alpine3.18
     container_name: url-shortener-postgres
@@ -24,6 +27,12 @@ services:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+  url-shortener-redis:
+    image: redis:7.2.1-alpine3.18
+    container_name: url-shortener-redis
+    restart: always
+    ports:
+      - "10003:6379"
 
 networks:
   default:
