--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:postgresql://[host]:[port]/[db]
 spring.datasource.username=[username]
 spring.datasource.password=[password]
+
+spring.data.redis.host=[redis_host]
+spring.data.redis.port=[redis_port]
+spring.data.redis.database=[redis_db]
