Add Datasource Connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://[host]:[port]/[db]
-spring.datasource.username=[username]
-spring.datasource.password=[password]
+spring.datasource.url=jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.username=postgres
+spring.datasource.password=root
 
-spring.data.redis.host=[redis_host]
-spring.data.redis.port=[redis_port]
-spring.data.redis.database=[redis_db]
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.database=0
