--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     image: postgres:16.0-alpine3.18
     container_name: url-shortener-postgres
     restart: always
+    ports:
+      - "10002:5432"
     volumes:
       - ./deployments/postgres/schema.sql:/docker-entrypoint-initdb.d/create_tables.sql
     environment:
