--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <java.version>20</java.version>
     <kotlin.version>1.9.10</kotlin.version>
     <mockitoKotlin.version>5.1.0</mockitoKotlin.version>
+    <resilience4j.version>2.1.0</resilience4j.version>
   </properties>
 
   <dependencies>
@@ -45,6 +46,11 @@
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-kotlin</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-spring-boot3</artifactId>
+      <version>${resilience4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
