--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.database=0
+
+resilience4j.retry.instances.retryLinkCodeExists.maxAttempts=3
+resilience4j.retry.instances.retryLinkCodeExists.retryExceptions[0]=io.github.nicholassiew1991.urlshortenerapi.links.exceptions.LinkCodeExistException
