--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>io.hypersistence</groupId>
+      <artifactId>hypersistence-utils-hibernate-62</artifactId>
+      <version>3.6.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-kotlin</artifactId>
     </dependency>
