--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.database=0
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 resilience4j.retry.instances.retryLinkCodeExists.maxAttempts=3
 resilience4j.retry.instances.retryLinkCodeExists.retryExceptions[0]=io.github.nicholassiew1991.urlshortenerapi.links.exceptions.LinkCodeExistException
